static/css/base.css
/* ... */
h2, .nav-link, .nav-link:not(i) {
    font-family: 'Abel', sans-serif !important;
    text-transform: uppercase;
}

h2.logo-font {
    color: #ffaa42 !important;
}

hr {
    border-top: 1px solid rgba(255, 166, 71, 0.5);
}

.text-muted {
    color: #a6a6a6 !important;
}

.text-danger {
    color: #ff4f42 !important;
}

/* Disable buggy animation for some collapsing elements */
.collapsing:not(#order-summary) {
    -webkit-transition: none;
    transition: none;
    display: none;
}

.nav-item {
    padding-left: 15px;
}

.nav-item .dropdown-menu {
    margin: 0 15px 0 0;
    padding: 0;
}

.nav-item .dropdown-item {
    padding: .25rem .6rem;
}

.nav-link, .navbar-toggler {
    font-size: 1.25rem;
    font-weight: bold;
    letter-spacing: .1rem;
    text-shadow: 0 0 10px rgb(0 0 0), 0.5px 0.5px 3px black;

}

.logo-font.nav-link {
    color: #ffaa42 !important;
}

.logo-font.nav-link:hover,
.logo-font.nav-link:focus {
    color: #fff !important;
    text-shadow: 1px 1px 3px black, 0 0 11px #ffc107;
}

.nav-link:hover, .navbar-toggler:hover {
    color: #ffaa42 !important;
    text-shadow: 0 0 20px rgba(0, 0, 0, 0.7), 0.5px 0.5px 7px black;
}

a, h1 {
    color:#fff;
    transition: all, .2s ease-in-out;
}

p {
    color: #c5c5c5;
}

.logo-font {
    text-transform: uppercase;
    font-weight: bold;
}

.main-logo-link {
    width: fit-content;
    padding: 10px 16px;
    border: 1px solid #dd8b27b9;
    box-shadow: 0 0 5px black;
    border-radius: 50px;
    backdrop-filter: blur(2px);
}

.main-logo-link:hover,
.main-logo-link:active,
.main-logo-link:focus {
    background-color: #ca76107c;
    text-shadow: 0 0 5px rgba(255, 255, 255, 0.7) !important;
}

.btn-trans, .input-btn {
    background: linear-gradient(45deg, #2125294a 50%, rgb(21 93 171 / 25%) 50%);
    border: 1px solid #ced4da !important;
    transition: all .3s;
}

.btn-trans:hover,
.btn-trans:active {
    background-color: #f0a345e7;
}

.btn {
    border: 1px solid transparent;
    transition: all .2s ease-in-out;
}

.btn, button, a.btn {
    text-transform: uppercase;
}

.btn:not(.product-edit-link) {
    color: white !important;
}

.btn-orange {
    background: linear-gradient(45deg, #9351008c, #e17c008c 50%, #dd8b27b9 50%, #ffa73a);
    border: 1px solid #865d11 !important;
    text-shadow: 0.4px 0.4px 3px black;
}

.btn-grey {
    background: linear-gradient(45deg, #4b4b4b8c, #6d6d6d8c 50%, #706f84b9 50%, #a2a2a2);
    border: 1px solid #484848;
}

.btn-grey:hover {
    text-shadow: 0 0 8px #ffaa42, 1px 1px 3px black;
    box-shadow: 0 0 5px #ffaa42;
}

.btn-orange:hover,
.btn-green:hover,
.btn-blue:hover {
    font-weight: bold;
    text-shadow: 0 0 5px rgba(0, 0, 0, .5);
    box-shadow: 0 0 5px white;
    /* background: linear-gradient(#ffaa42b9, #e17c008c), linear-gradient(150deg, rgba(42, 147, 165, 0.664), rgba(68, 0, 255, 0.589)); */
}

.btn-blue {
    background: linear-gradient(
        45deg, #001f698c, #0058e18c 50%, #276eddb9 50%, #68a1ff);
    border: 1px solid #003d8b;
}

.btn-green {
    background: linear-gradient(45deg, #146e008c, #4bad008c 50%, #27bf1cb9 50%, #99ff3acc);
    border: 1px solid #3f8611 !important;
}

.btn-green:hover {
    background-color: #0b350b;
}

.btn-red {
    background: linear-gradient(45deg, #6400008c, #e100008c 50%, #dd2727b9 50%, #ff6868);
    border: 1px solid darkred;
}

.btn-red:hover {
    background-color: rgb(92, 0, 0);
    text-shadow: 0 0 8px #d39191, 1px 1px 15px black;
    box-shadow: 0 0 5px #d39191;
}

.btt-button {
    height: 50px;
    width: 50px;
    position: fixed;
    bottom: 10px;
    right: 10px;
    padding-top: 5px;
    padding-left: 5px;
    border: 1px solid #ced4da;
    border-radius: 40px 3px 3px 3px;
    transition: all .2s ease-in-out;
}

.btt-link,
.update-link,
.remove-item {
    cursor: pointer;
}

.remove-item {
    padding: 7px 11px 5px !important;
}

.mb-o8 {
    margin-bottom: .8rem;
}

input[name='q']::placeholder {
    color: #738292;
}

/* ------------------------------- Bootstrap toasts */

.message-container {
    position: fixed;
    top: 100px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

/* Classes for messages colors */

.border-success {
    border-color: #2db300 !important;
}

.border-error {
    border-color: #ff3300 !important;
}

.border-warning {
    border-color: #ffbd07 !important;
}

.border-info {
    border-color: #1778b8 !important;
}

.cart-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

/* Allauth form formatting */

.allauth-form-inner-content {
    padding: 15px;
    box-shadow: 0 0 7px black;
    border: 1px solid #ffa500a1;
    margin: 0 auto;
    max-width: 650px;
}

.allauth-form-inner-content p {
    margin-top: 1.5rem; /* mt-4 */
}

.allauth-form-inner-content input {
    border: 1px solid #adb5bd;
    margin-top: 20px;
    opacity: .9;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #738292;
}

.allauth-form-inner-content input[type='submit'] {
	/* btn */
	display: inline-block;
    font-weight: 400;
    color: #fff;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: #000;
    border: 1px solid #000;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    transition: all .2s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {	
    text-shadow: 0 0 5px black;
    background-color: rgba(61, 5, 0, 0.521);
    border-color: rgb(255, 255, 255, .5);
}

/* To vertically align allauth checkbox with its label */
#id_remember {
    bottom: .35rem;
}

.login li {
    list-style-type: none;
}

.login ul {
    padding: 0;
}
/* ... */

